WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40182
[GTK] EventSender should call gtk_main_do_event instead of invoking signal handlers directly
https://bugs.webkit.org/show_bug.cgi?id=40182
Summary
[GTK] EventSender should call gtk_main_do_event instead of invoking signal ha...
Martin Robinson
Reported
2010-06-04 12:20:32 PDT
Calling gtk_main_do_event is "more correct." In particular, it will allow us to call gtk_get_current_event() in WebCore/WebKit without breaking LayoutTests.
Attachments
Use gtk_main_do_event instead of invoking signal handlers directly
(2.48 KB, patch)
2010-06-04 12:26 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-06-04 12:26:46 PDT
Created
attachment 57905
[details]
Use gtk_main_do_event instead of invoking signal handlers directly
Xan Lopez
Comment 2
2010-06-04 12:35:44 PDT
Comment on
attachment 57905
[details]
Use gtk_main_do_event instead of invoking signal handlers directly Looks good.
Martin Robinson
Comment 3
2010-06-04 12:41:48 PDT
Committed
r60700
: <
http://trac.webkit.org/changeset/60700
>
Martin Robinson
Comment 4
2010-07-30 12:38:37 PDT
***
Bug 29203
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug